# novusvault

./: CLAUDE.md
.claude/: settings.local.json
company-vault-backend/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
company-vault-backend/app/: main.py
company-vault-backend/app/core/: config.py  database.py  exceptions.py  health.py  logging.py  rate_limit.py  security.py
company-vault-backend/app/modules/admin/: models.py  repository.py  router.py  schemas.py  service.py
company-vault-backend/app/modules/auth/: models.py  repository.py  router.py  schemas.py  service.py
company-vault-backend/app/modules/documents/: chunking.py  classification_rules.py  extraction.py  models.py  pipeline.py  repository.py  router.py  schemas.py  service.py
company-vault-backend/app/modules/drive/: models.py  repository.py  router.py  schemas.py  service.py
company-vault-backend/app/modules/knowledge/: models.py  repository.py  router.py  schemas.py  service.py
company-vault-backend/app/modules/settings/: models.py  repository.py  router.py  schemas.py  service.py
company-vault-backend/app/modules/sync/: models.py  repository.py  router.py  schemas.py  service.py
company-vault-backend/app/providers/drive/: base.py  google_drive.py
company-vault-backend/app/shared/: classification.py  dependencies.py  enums.py  pagination.py  schemas.py
company-vault-backend/app/workers/: actors.py  broker.py
company-vault-backend/migrations/: env.py
company-vault-backend/migrations/versions/: aa5978af8c40_initial_schema.py
(+113 files in other folders)
