[project]
name = "company-vault-backend"
version = "0.1.0"
description = "Company Vault — FastAPI modular monolith + Dramatiq worker"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "sqlalchemy[asyncio]>=2.0.36",
  "alembic>=1.14",
  "asyncpg>=0.30",
  "pgvector>=0.3.6",
  "redis>=5.2",
  "dramatiq[redis]>=1.17",
  "pyjwt>=2.10",
  "cryptography>=43.0",
  "google-auth>=2.36",
  "google-auth-oauthlib>=1.2",
  "google-api-python-client>=2.154",
  "aioboto3>=13.2",
  "httpx>=0.27",
  "pymupdf>=1.24",
  "python-docx>=1.1",
  "openpyxl>=3.1",
  "python-pptx>=1.0",
  "pytesseract>=0.3.13",
  "pillow>=10.4",
  "slowapi>=0.1.9",
  "structlog>=24.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=6.0",
  "ruff>=0.8",
  "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
